--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="delete_completed">Delete Completed</string>
+    <string name="third_party_library">Third Party Library</string>
 </resources>
